Avoid line wrap in td

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -95,3 +95,7 @@ tr.condensed * {
 button.btn-xs {
   font-size: 10px;
 }
+
+td.nowrap {
+  white-space: nowrap;
+}
